# clicker-idf

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig before mesh  sdkconfig works  sdkconfig.old
components/arduino/: CMakeLists.txt  idf_component.yml
components/espressif__iot_bridge/: Kconfig
components/espressif__iot_bridge/src/: bridge_common.c  bridge_wifi.c
main/: CMakeLists.txt  funclick_logo.h  idf_component.yml  main.cpp  main.cpp_regular_wifi
main/libraries/Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h
